adding the photo slider component

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <meta
       name="description"
       content="Web site created using create-react-app"
@@ -27,6 +28,10 @@
     <title>React App</title>
   </head>
   <body>
+    <iframe
+    allow="microphone;"
+    src="https://console.dialogflow.com/api-client/demo/embedded/99586b3a-0636-4f26-943c-e96cf3c2286f">
+</iframe>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
