--- a/client/public/index.html
+++ b/client/public/index.html
@@ -31,18 +31,19 @@
     <iframe
     allow="microphone;"
     src="https://console.dialogflow.com/api-client/demo/embedded/99586b3a-0636-4f26-943c-e96cf3c2286f">
-</iframe>
+  </iframe>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <div class="container">
+      <div class="sky"></div>
+      <div class="sea">
+      <div class="light"></div></div>
+      <div class="sun"></div>
+      <div class="bird1"></div>
+      <div class="birdr1"></div>
+      <div class="bird"></div>
+      <div class="birdr"></div>
+      <div class="wave"></div></div>
+    </div>
   </body>
 </html>
