adding some styling and moving of componeents to correct indexes

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -28,22 +28,9 @@
     <title>React App</title>
   </head>
   <body>
-    <iframe
-    allow="microphone;"
-    src="https://console.dialogflow.com/api-client/demo/embedded/99586b3a-0636-4f26-943c-e96cf3c2286f">
-  </iframe>
+
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <div class="container">
-      <div class="sky"></div>
-      <div class="sea">
-      <div class="light"></div></div>
-      <div class="sun"></div>
-      <div class="bird1"></div>
-      <div class="birdr1"></div>
-      <div class="bird"></div>
-      <div class="birdr"></div>
-      <div class="wave"></div></div>
+    <div id="root">
     </div>
   </body>
 </html>
